# scalable-challenge-2026

./: .dockerignore  .env.example  .gitignore  Challenge.md  Dockerfile  Makefile  README.md  SETUP.md  db.py  docker-compose.yaml  ingest.py  pipeline.py  pyproject.toml  queries.py  requirements.txt  ruff.toml  transform.py  validate.py
.github/workflows/: lint.yml  pipeline.yml
data/: dataset-sample.jsonl  generate.py  sample.jsonl
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: listens.sql  schema.yml
dbt/models/raw/: raw_listens.sql
dbt/models/staging/: stg_listens.sql
dbt/tests/: assert_listens_count_matches_raw.sql  assert_listens_count_matches_stg.sql  assert_unique_natural_key.sql
tests/: conftest.py  test_ingest.py  test_validate.py
