[project]
name = "scalable-challenge-2026"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb==1.1.3",
    "prefect>=3.0",
    "python-dotenv>=1.0",
    "dbt-duckdb>=1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
